--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "style": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,11 +13,14 @@
   "dependencies": {
     "cheerio": "0.20.0",
     "es6-promisify": "4.1.0",
-    "fdf": "0.0.0",
     "fill-pdf": "0.5.0",
     "lodash": "4.13.1",
-    "node-obsidian": "0.3.1",
-    "request-promise": "3.0.0",
-    "why-is-node-running": "1.2.2"
+    "request-promise": "3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "2.13.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-config-airbnb-base": "3.0.1",
+    "eslint-plugin-import": "1.9.2"
   }
 }
